fixed jumping images/ added new nav items/ changed InnOcean text

--- a/styles.css
+++ b/styles.css
@@ -224,6 +224,13 @@ a {
     text-decoration: underline;
 }
 
+.commercial-spaces-text {
+    position: absolute;
+    padding: 2.5vh 3rem;
+    background-color: rgba(178, 221, 240, .8);
+    text-decoration: none;
+}
+
 .furniture-description-text-a {
     margin: auto;
     padding: 10%;
@@ -811,7 +818,6 @@ input::placeholder {
         padding: 0;
         margin: 0;
     }
-
 
     .header-h1 {
         margin: .5rem 0 0 1rem;
